Elastic: Fix small wrapping issue in weekly recurrence form

--- a/plugins/libkolab/skins/elastic/include/libcalendaring.less
+++ b/plugins/libkolab/skins/elastic/include/libcalendaring.less
@@ -508,6 +508,7 @@ html.touch {
         display: inline-block;
         width: 3.5em;
         margin-right: .5rem;
+        white-space: nowrap;
 
         input {
             margin-right: .25rem;
